# playin-android

./: .gitignore  README.md  README_中文.md
PlayINSdk/: build.gradle  local.properties  settings.gradle
PlayINSdk/app/: build.gradle
PlayINSdk/app/src/androidTest/java/com/tech/playinsdk/: ExampleInstrumentedTest.java
PlayINSdk/app/src/main/: AndroidManifest.xml
PlayINSdk/app/src/main/cpp/: CMakeLists.txt  FFmpeg.cpp  FFmpeg.h
PlayINSdk/app/src/main/java/com/tech/playinsdk/: PlayInView.java
PlayINSdk/app/src/main/res/anim/: playin_menu.xml
PlayINSdk/app/src/main/res/drawable/: playin_audio.xml  playin_bg_menu.xml  playin_btn_install.xml
PlayINSdk/app/src/main/res/layout/: activity_main.xml  activity_play.xml  playin_view.xml
PlayINSdk/app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
PlayINSdk/gradle/wrapper/: gradle-wrapper.properties
PlayINSdk/playinsdk/: .gitignore  build.gradle
PlayINSdk/playinsdk/src/main/cpp/: CMakeLists.txt  FFmpeg.cpp  FFmpeg.h  PILog.h  Playin.cpp
PlayINSdk/playinsdk/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h
PlayINSdk/playinsdk/src/main/cpp/yuv/include/libyuv/: planar_functions.h
PlayINSdk/playinsdk/src/main/res/anim/: playin_landscape_in.xml  playin_landscape_out.xml  playin_portrait_in.xml  playin_portrait_out.xml
PlayINSdk/playinsdk/src/main/res/drawable/: playin_bg_info.xml  playin_btn_close.xml  playin_btn_install.xml  playin_progress_land.xml  playin_progress_port.xml
PlayINSdk/playinsdk/src/main/res/layout/: playin_view.xml  playin_view_landscape.xml  playin_view_portrait.xml
(+43 files in other folders)
